--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "start": "set PORT=3001 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
